<resources>
    <string name="app_name">Map</string>
    <string name="red" />
    <string name="blue" />
    <string name="yellow" />
    <string name="orange" />
    <string name="next">Next</string>
    <string name="image_url">http://openweathermap.org/img/wn/%1s@2x.png</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valute">Курс валют</string>
    <string name="Summa">Введите сумму</string>
    <string name="Result">Результат</string>
    <string name="ok">OK</string>
    <string name="next1">Next</string>
    <string name="_5_days_weather_forecast">5 DAYS WEATHER FORECAST</string>
    <string name="weather_in_bishkek_kg">Weather in Bishkek,KG</string>
    <string name="_35_42">[35.42</string>
    <string name="_29">29</string>
    <string name="bishkek">Bishkek</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="_38">21</string>
    <string name="_28">28</string>
    <string name="_18">18</string>
    <string name="little_cloud">Little cloud</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="sunset">Sunset</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="_21_00">21:00</string>
    <string name="_100">100%</string>
    <string name="_1010mb">1010mb</string>
    <string name="_6_00">6:00</string>
    <string name="_81">81%</string>
    <string name="sw_4m_s">SW 4m/s</string>
    <string name="_21">21</string>
    <string name="_10">10</string>
    <string name="_4">-4</string>
    <string name="max1">max</string>
    <string name="min1">min</string>
    <string name="start_navigating">Start Navigating</string>
</resources>