<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".data.entity.weatherforecast.WeatherForecastFragment">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:id="@+id/main_info"
       android:orientation="vertical"
       android:layout_centerHorizontal="true"
       android:gravity="center_horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       >
    <TextView
        android:text="@string/_5_days_weather_forecast"
       style="@style/Forecast_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_city_name"
        android:text="@string/weather_in_bishkek_kg"
        style="@style/Forecast_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_geo_coord"
        android:hint="@string/_35_42"
        style="@style/Forecast_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
   </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyler_forecast"
            android:layout_below="@+id/main_info"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        style="?android:attr/progressBarStyleLarge"
        android:progress="@android:integer/config_mediumAnimTime"
        android:layout_centerInParent="true"/>
</RelativeLayout>