<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MapsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/map_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#05679B"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" >
            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="565dp"
                />
        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/bottom_sheet2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:behavior_peekHeight="75dp"
                app:layout_behavior="@string/bottom_sheet_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingStart="75dp"
                            android:text="@string/valute"
                            android:textColor="#363434"
                            android:textSize="35sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#427044">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Spinner
                                android:id="@+id/spinner2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="36dp"
                                android:layout_marginEnd="32dp"
                                android:spinnerMode="dialog"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="76dp"
                                android:layout_marginEnd="32dp"
                                android:spinnerMode="dialog"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/editText_map"
                                style="@style/Button_Map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="32dp"
                                android:layout_marginTop="16dp"
                                android:hint="@string/Summa"
                                android:textSize="20sp"
                                android:inputType="number"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/result_map"
                                style="@style/Button_Map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="44dp"
                                android:layout_marginBottom="32dp"
                                android:hint="@string/Result"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent" />

                            <Button
                                android:id="@+id/calculate"
                                style="@style/Button"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginEnd="172dp"
                                android:layout_marginBottom="16dp"
                                android:background="#6D6262"
                                android:text="@string/ok"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintRight_toRightOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
